2007-01-24  Benjamin Otte <otte@gnome.org>

	* glib/gprintf.c (g_sprintf): Clarify the documentation
	regarding overflows (wording by Jan Schmidt)

2007-01-23  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* README: Remove mention of no-longer-existing PATCH
	keyword in bugzilla. (#396899)

2007-01-23  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutf8.c (g_utf8_get_char_validated): Clarify
	the behaviour is max_len is zero.  (#400044, 
	Benjamin Dauvergne)

2007-01-23  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.c (print_help): Use bitwise &
	when operating on flags.  (#399971, Jon Oberheide)

2007-01-19  Matthias Clasen  <mclasen@redhat.com>

	Some file list updates (#398069, Owen Taylor)

	* docs/Changes-2.0.txt
	* docs/reference/README.cvs-commits
	* glib.spec.in: Remove obsolete files

	* tests/Makefile.am:
	* glib/libcharset/Makefile.am:
	* gobject/Makefile.am:
	* Makefile.am: Add some missing files to EXTRA_DIST

	* tests/timeloop-basic.c: Make it build
	* HACKING: Small updates

2007-01-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/gdate.c (g_date_set_time): Fix a typo.  (#398203,
	Owen Taylor)

2007-01-17  Tor Lillqvist  <tml@novell.com>

	* config.h.win32.in
	* glib/galloca.h
	* glib/gbacktrace.h
	* glib/gwin32.c
	* glibconfig.h.win32.in
	* README.win32: More minor tweaks for Digital Mars
	compiler. (#346808, Serhat Sevki Dincer)
	
2007-01-17  Tor Lillqvist  <tml@novell.com>

	* glib-zip.in: DLLs are always installed in "bin" with current
	libtool, drop unnecessary logic to check where they are. Include
	also the COPYING file.

2007-01-17  Tor Lillqvist  <tml@novell.com>

	* glib/galloca.h: Use <malloc.h> also with Digital Mars compiler
	on Win32. (#346808, Serhat Sevki Dincer)

2007-01-16  Matthias Clasen  <mclasen@redhat.com>

	* glib/gthread.h:
	* glib/gthread.c:
	* glib/glib.symbols: Revert an accidental ABI break by
	moving gettime out of the GThreadFunctions struct and making
	it a separate variable.  (#397139, Joe Marcus Clarke)
